--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,10 @@
+@tablet: ~"(max-width: 800px)";
+@mobile: ~"(max-width: 500px)";
+
 @hundred:100%;
 @fullHeight:645px;
-@mobile: ~"(max-width: 500px)";
+
+
 
 
 
