--- a/less/navigation.less
+++ b/less/navigation.less
@@ -24,6 +24,12 @@
        
         padding-left: 300px;
 
+      
+        @media @tablet {
+            padding-left: 50px;
+          
+        }
+        
         @media @mobile {
 
             padding-left: 10px;
@@ -49,12 +55,17 @@
     margin-right: 95px;
     box-shadow: 0 3px 20px 0 #0000003b;
 
+   
+    @media @tablet {
+        margin-right: 15px;
+      
+    }
+
     @media @mobile {
 
         margin-right: 5px;
    
     }
-
 
 }
 .navLogBtn{
