mobile-tablet-desktop version v2

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,12 +1,29 @@
-.btnStyle (@color,@border){
-    background-color: @color;
-    border-radius: @border;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-  }
+.btnStyle (@color,@border) {
+  background-color: @color;
+  border-radius: @border;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.btnHover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
+    0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+.flexRow {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+
+.flexColumn {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
