--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,16 @@
+.btnHover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+.flexRow {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+.flexColumn {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
 html,
 body,
 div,
@@ -156,12 +169,12 @@ p {
   height: 100%;
   width: 100%;
   display: flex;
+  align-items: center;
   flex-direction: row;
-  background: #771C82;
-  background-image: linear-gradient(-90deg, #c64b8c, #771C82);
+  background: #771c82;
+  background-image: linear-gradient(-90deg, #c64b8c, #771c82);
   padding: 1%;
   justify-content: space-between;
-  align-items: center;
   box-shadow: 0 3px 20px 0 #0000003b;
 }
 .nav_bar img {
@@ -181,7 +194,7 @@ p {
   text-decoration: none;
   color: white;
   padding-left: 30px;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 .nav_bar .navSignBtn {
   background-color: #12F5BD;
@@ -209,6 +222,9 @@ p {
     margin-right: 5px;
   }
 }
+.nav_bar .navSignBtn:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
 .nav_bar .navLogBtn {
   font-size: 18px;
   color: #12F5BD;
@@ -228,6 +244,9 @@ footer {
 footer img {
   padding: 5px;
 }
+footer img:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
 .introHeader {
   display: flex;
   background-image: url(/img/header-bg-large.png);
@@ -235,8 +254,9 @@ footer img {
   text-align: center;
   font-size: 55px;
   align-items: center;
+  height: 610px;
   color: white;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   justify-content: flex-start;
   border-radius: 0 0 85% 0.085%;
 }
@@ -246,10 +266,9 @@ footer img {
     font-size: 5px;
     border-radius: 0 0 0 0%;
     display: flex;
-    flex-direction: column;
-    text-align: center;
-    font-size: 55px;
     align-items: center;
+    flex-direction: column;
+    font-size: 55px;
     height: 1045px;
   }
 }
@@ -260,7 +279,6 @@ footer img {
     border-radius: 0 0 0 0%;
     display: flex;
     flex-direction: column;
-    text-align: center;
     font-size: 55px;
     align-items: center;
     height: 645px;
@@ -306,6 +324,9 @@ footer img {
     margin-top: 15px;
   }
 }
+.introHeader .signUpButton:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
 .introHeader .storesBadge {
   display: flex;
   justify-content: center;
@@ -315,9 +336,9 @@ footer img {
 @media (max-width: 500px) {
   .introHeader .storesBadge {
     display: flex;
-    justify-content: center;
-    flex-direction: row;
     align-items: center;
+    flex-direction: row;
+    justify-content: center;
     text-align: center;
     padding: 5px;
   }
@@ -333,6 +354,9 @@ footer img {
     margin-left: 20px;
   }
 }
+.introHeader .storesBadge .phApple:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
 .introHeader .storesBadge .phGoogle {
   width: 18%;
   margin-left: 20px;
@@ -344,6 +368,9 @@ footer img {
     margin-left: 20px;
   }
 }
+.introHeader .storesBadge .phGoogle:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
 .middleCont {
   display: flex;
   color: white;
@@ -354,13 +381,13 @@ footer img {
 .middleCont p {
   font-size: 30px;
   padding: 30px;
-  padding-top: 100px ;
+  padding-top: 100px;
 }
 @media (max-width: 500px) {
   .middleCont p {
     font-size: 22px;
     padding: 22px;
-    padding-top: 100px ;
+    padding-top: 100px;
   }
 }
 .middleCont img {
@@ -380,7 +407,7 @@ footer img {
   align-items: center;
   flex-direction: column;
   color: #37145B;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 1000;
 }
 .middleCont .middleCont2 {
@@ -389,8 +416,8 @@ footer img {
   align-items: center;
   flex-direction: column;
   color: #37145B;
-  background-color: #BBE1EA;
-  font-family: 'Montserrat', sans-serif;
+  background-color: #bbe1ea;
+  font-family: "Montserrat", sans-serif;
   font-weight: 1000;
 }
 .middleCont .middleCont3 {
@@ -400,7 +427,7 @@ footer img {
   flex-direction: column;
   color: white;
   background-color: #2e0893;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 1000;
 }
 .middleCont .middleCont4 {
@@ -410,7 +437,7 @@ footer img {
   flex-direction: column;
   color: white;
   background-color: #c64b8c;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 1000;
 }
 .commentSection {
@@ -421,7 +448,7 @@ footer img {
   padding: 50px;
   height: 650px;
   align-items: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 25px;
   color: white;
