--- a/less/footer.less
+++ b/less/footer.less
@@ -11,8 +11,15 @@ footer {
     box-shadow: 0 3px 20px 0 #0000003b;
    
 
+    
     img{
         padding: 5px;
+      
+    }
+    img:hover{
+   
+        .btnHover
+    
     }
   }
   
