--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,85 +1,63 @@
+///Navigatin bar
 
+.nav_bar {
+  height: 100%;
+  width: 100%;
+  .flexRow;
+  background: #771c82;
+  background-image: linear-gradient(-90deg, #c64b8c, #771c82);
+  padding: 1%;
+  justify-content: space-between;
 
-.nav_bar{
-    height: 100%;
-    width:100%;
-    display: flex;
-    flex-direction: row;
-    background: #771C82;
-    background-image: linear-gradient(-90deg,  #c64b8c, #771C82);
-    
-   // background-image:  url(/BuildWeek/img/HEADER\ LAYOUT23@3x.png);
-    padding: 1%;
-    justify-content: space-between;
-    align-items: center;
-     box-shadow: 0 3px 20px 0 #0000003b;
+  box-shadow: 0 3px 20px 0 #0000003b;
 
+  @media @mobile {
+  }
 
-     @media @mobile {
-      
-       
-}
-    
-    img{
-       
-        padding-left: 300px;
+  img {
+    padding-left: 300px;
 
-      
-        @media @tablet {
-            padding-left: 50px;
-          
-        }
-        
-        @media @mobile {
-
-            padding-left: 10px;
-       
-        }
-       
+    @media @tablet {
+      padding-left: 50px;
     }
 
-   a{
+    @media @mobile {
+      padding-left: 10px;
+    }
+  }
+
+  a {
     text-decoration: none;
-     color: white;
-    
-     padding-left: 30px;
-     font-family: 'Oswald', sans-serif;
-     
-   
-    
-   }
-   .navSignBtn{
-    .btnStyle(@Teal,30px);
+    color: white;
+
+    padding-left: 30px;
+    font-family: "Oswald", sans-serif;
+  }
+  //sign in and Log in buttons
+  .navSignBtn {
+    .btnStyle(@Teal, 30px);
     color: @Purple;
     font-size: 15px;
     margin-right: 95px;
     box-shadow: 0 3px 20px 0 #0000003b;
 
-   
     @media @tablet {
-        margin-right: 15px;
-      
+      margin-right: 15px;
     }
 
     @media @mobile {
-
-        margin-right: 5px;
-   
+      margin-right: 5px;
     }
+  }
 
-}
-.navLogBtn{
-    
+  .navSignBtn:hover {
+    .btnHover;
+  }
+  .navLogBtn {
     font-size: 18px;
     color: @Teal;
     padding-right: 12px;
     cursor: pointer;
-    
-}
-   
+  }
 }
 
-
-// @media @mobile {
-
-// }
